# base_for_imgui

./: .gitignore  .gitmodules  CMakeLists.backup  CMakeLists.txt  CMakeLists_for_metal.txt  CMakeLists_sdl_opengl3.txt  main.cpp
LoaderBase/: Loader.cpp  Loader.h
cmake/: CMakeAddGFLAG.cmake  CMakeAddGLEW.cmake  CMakeAddGLM.cmake  CMakeAddGLOG.cmake  CMakeAddImGuiSDLOpenGL3.cmake  CMakeAddSDL2.cmake  CMakeAddSDL2_image.cmake  CMakeAddSDL2_mixer.cmake
cmake-procedures/: CMakeAddGLEW.cmake  CMakeAddGLFW.cmake  CMakeAddGLM.cmake  CMakeAddImGuiDX.cmake  CMakeAddImGuiDX12.cmake  CMakeAddImGuiGlfwOpenGL3.cmake  CMakeAddSOIL2.cmake
example_glfw_opengl3/: Application.cpp  Application.h  main.cpp
example_sdl_opengl3/: main.cpp
example_win32_directx11/: main.cpp
imgui-cmake/: CMakeAddImGuiGlfwOpenGL3.cmake
main/: CMakeLists.txt  main.cpp  main_opengl.cpp  old_main.cpp
main/src/corso/: Shader.cpp  Shader.h  core.fragment  core.vs  main.back.cpp  main.cpp  main_back.cpp
metal-cpp-test/: main.cpp  metal_adder.cpp
